# public/docs/api-docs.json
@@ -170,9 +170,10 @@
                                                             "type": "string",
                                                             "example": "9876543210"
                                                         },
-                                                        "age": {
-                                                            "type": "integer",
-                                                            "example": 30
+                                                        "date_of_birth": {
+                                                            "type": "string",
+                                                            "format": "date-time",
+                                                            "example": "1996-05-28T00:00:00.000Z"
                                                         },
                                                         "sex": {
                                                             "type": "string",
@@ -259,9 +260,10 @@
                                         "type": "string",
                                         "example": "Rahul"
                                     },
-                                    "age": {
-                                        "type": "integer",
-                                        "example": 30
+                                    "date_of_birth": {
+                                        "type": "string",
+                                        "format": "date-time",
+                                        "example": "1996-05-28T00:00:00.000Z"
                                     },
                                     "sex": {
                                         "type": "string",
@@ -315,9 +317,10 @@
                                                     "type": "string",
                                                     "example": "9876543210"
                                                 },
-                                                "age": {
-                                                    "type": "integer",
-                                                    "example": 30
+                                                "date_of_birth": {
+                                                    "type": "string",
+                                                    "format": "date-time",
+                                                    "example": "1996-05-28T00:00:00.000Z"
                                                 },
                                                 "sex": {
                                                     "type": "string",
